img/OL-TPE/mbms-morder-ol-tpe/ol-deploy-dualvalidate.yaml
#*YAML命名規則:${環境代碼}-${對應 K8s API資源縮寫 (shortnames) }-${模組名稱|系統功能}-${opt 用途}
#*metadata 命名規則：${對應 K8s API資源縮寫 (shortnames)}-${模組名稱|系統功能|NameSpace}-${opt 用途|敘述}
kind: Deployment
apiVersion: apps/v1
metadata:
  name: deploy-dualvalidate
  namespace: mbms-morder-ol-tpe
  labels:
    app: dualvalidate
    version: m5
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dualvalidate
  template:
    metadata:
      labels:
        app: dualvalidate
        version: m5
      annotations:
        prometheus.io/path: /actuator/prometheus
        prometheus.io/port: '8080'
        prometheus.io/scheme: http
        prometheus.io/scrape: 'true'
        sidecar.istio.io/inject: 'true'
    spec:
      #取得對應 harbor 的secret資訊
      imagePullSecrets:
      - name: secret-harbor-morder-ol
      containers:
      - name: dualvalidate
        image: >-
          harbor.cht.com.tw:30725/mbms-morder-prod/dual-validate:latest
        imagePullPolicy: Always
        livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 40
            timeoutSeconds: 5
            periodSeconds: 20
            successThreshold: 1
            failureThreshold: 5
        readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 40
            timeoutSeconds: 5
            periodSeconds: 20
            successThreshold: 1
            failureThreshold: 5
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: compares-data
          mountPath: /app/comparelogs
        resources:
          requests: 
            memory: 1Gi
            cpu: 500m
          limits: 
            memory: 1536Mi
            cpu: "1"
      volumes:
      - name: compares-data
        persistentVolumeClaim:
          claimName: mbms-webor
